[package]
name = "timetrackr-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
config = "0.13.3"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
termcolor = "1.3.0"
